Fix for missing locks due to recent change.

PR:		usb/170606
MFC after:	2 weeks